--- a/site/src/Sass/blocks/_Return.scss
+++ b/site/src/Sass/blocks/_Return.scss
@@ -3,21 +3,13 @@
 .return {
   background: var(--clr-gray--light);
   position: relative;
-  .container {
-    display: flex;
-    flex-direction: column;
-    gap: var(--spacing-md);
-    align-items: center;
-    text-align: center;
+  isolation: isolate;
 
-    @include responsive-screen(md) {
-      flex-direction: row;
-      text-align: start;
-      justify-content: flex-end;
-
-      & > * {
-        flex: 1 1 50%;
-      }
+  overflow-wrap: break-word;
+  & > * {
+    *::selection {
+      background: var(--clr-selection);
+      color: currentColor;
     }
   }
 
@@ -25,6 +17,11 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-md);
+    align-items: center;
+    @include responsive-screen(md) {
+      text-align: start;
+      align-items: flex-start;
+    }
   }
   &__title {
     color: var(--clr-green);
@@ -34,18 +31,19 @@
   }
   &__desc {
     line-height: 1.6;
-
     font-size: var(--fs-sm);
   }
   span {
     display: block;
     margin-block-start: var(--spacing-sm);
     font-weight: var(--fw-lg);
+    pointer-events: none;
   }
   .nav__link {
     color: var(--clr-purple);
     font-weight: var(--fw-lg);
     font-size: var(--fs-md);
+
     &:hover,
     &:focus {
       filter: brightness(90%);
