--- a/site/src/Sass/components/_Form.scss
+++ b/site/src/Sass/components/_Form.scss
@@ -3,9 +3,10 @@
   flex-direction: column;
   gap: var(--spacing-md);
   width: 100%;
-
   max-width: 600px;
   caret-color: var(--clr-purple);
+  position:relative;
+isolation:isolate;
 
   &__input-container {
     position: relative;
