changed paths in App.scss to test netlify deploy problem

--- a/site/src/Sass/App.scss
+++ b/site/src/Sass/App.scss
@@ -2,32 +2,32 @@
 =            css resets            =
 =============================================*/
 
-@import 'abstracts/mixins';
-@import 'abstracts/variables';
-@import 'abstracts/animations';
-@import 'base/base';
-@import 'base/reset';
-@import 'base/typography';
-@import 'components/Button';
-@import 'components/Container';
-@import 'components/FooterMenu';
-@import 'components/NavLink';
-@import 'components/PluginCard';
-@import 'components/SocialMenu';
-@import 'components/Logo';
-@import 'components/GifModal';
-@import 'components/Header';
-@import 'components/NavMenu';
-@import 'components/PluginCards';
-@import 'components/ElementOverlay';
-@import 'components/Form';
-@import 'blocks/Return';
-@import 'blocks/Footer';
-@import 'blocks/Main';
-@import 'blocks/NewIdea';
-@import 'blocks/Separator';
-@import 'blocks/Plugin';
-@import 'blocks/FigmaWindow';
+@import './abstracts/mixins';
+@import './abstracts/variables';
+@import './abstracts/animations';
+@import './base/base';
+@import './base/reset';
+@import './base/typography';
+@import './components/Button';
+@import './components/Container';
+@import './components/FooterMenu';
+@import './components/NavLink';
+@import './components/PluginCard';
+@import './components/SocialMenu';
+@import './components/Logo';
+@import './components/GifModal';
+@import './components/Header';
+@import './components/NavMenu';
+@import './components/PluginCards';
+@import './components/ElementOverlay';
+@import './components/Form';
+@import './blocks/Return';
+@import './blocks/Footer';
+@import './blocks/Main';
+@import './blocks/NewIdea';
+@import './blocks/Separator';
+@import './blocks/Plugin';
+@import './blocks/FigmaWindow';
 
 .arrows {
   position: relative;
