--- a/site/src/Sass/abstracts/_variables.scss
+++ b/site/src/Sass/abstracts/_variables.scss
@@ -72,6 +72,7 @@
   --plugin-fs-h1: 14px;
   --plugin-fs-h2: 12px;
   --plugin-fs-label: 11px;
+  --plugin-fs-info: 8px;
 
   --plugin-fs-button: 11px;
   --plugin-fs-info: 10px;
