--- a/site/src/Sass/components/_SocialMenu.scss
+++ b/site/src/Sass/components/_SocialMenu.scss
@@ -28,7 +28,7 @@
       position: relative;
       grid-area: icon;
       inline-size: 2rem;
-      aspect-ratio: 1/1;
+      block-size: 2rem;
       border-radius: 50%;
       background: var(--clr-gray--very-dark);
       filter: brightness(80%);
