--- a/site/src/Css/App.css
+++ b/site/src/Css/App.css
@@ -80,6 +80,75 @@
     transform: translateY(-20px);
   }
 }
+@keyframes multiplayer-1 {
+  10% {
+    transform: translate(20px, 20px);
+  }
+  20% {
+    transform: translate(40px, 80px);
+  }
+  30% {
+    transform: translate(-120px, 60px);
+  }
+  40% {
+    transform: translate(20px, 20px);
+  }
+  50% {
+    transform: translate(40px, 20px);
+  }
+  80% {
+    transform: translate(80px, -100px);
+  }
+  100% {
+    transform: translate(20px, 20px);
+  }
+}
+@keyframes multiplayer-2 {
+  10% {
+    transform: translate(-10px, -10px);
+  }
+  20% {
+    transform: translate(-20px, -80px);
+  }
+  30% {
+    transform: translate(80px, 60px);
+  }
+  40% {
+    transform: translate(20px, 20px);
+  }
+  50% {
+    transform: translate(60px, 30px);
+  }
+  80% {
+    transform: translate(50px, -90px);
+  }
+  100% {
+    transform: translate(-10px, -10px);
+  }
+}
+@keyframes multiplayer-3 {
+  10% {
+    transform: translate(-40px, -10px);
+  }
+  20% {
+    transform: translate(20px, 10px);
+  }
+  30% {
+    transform: translate(60px, 60px);
+  }
+  40% {
+    transform: translate(20px, 20px);
+  }
+  50% {
+    transform: translate(60px, 20px);
+  }
+  80% {
+    transform: translate(80px, -100px);
+  }
+  100% {
+    transform: translate(-10px, -10px);
+  }
+}
 /*=============================================
 =            css variables            =
 =============================================*/
@@ -350,6 +419,7 @@ h2 {
   padding-top: var(--spacing-md);
   max-width: 340px;
   flex: 1 1 100%;
+  min-height: 430px;
   transition: all 0.2s ease-in-out;
 }
 .plugin-card:hover, .plugin-card:focus {
@@ -423,7 +493,7 @@ h2 {
   position: relative;
   grid-area: icon;
   inline-size: 2rem;
-  aspect-ratio: 1/1;
+  block-size: 2rem;
   border-radius: 50%;
   background: var(--clr-gray--very-dark);
   filter: brightness(80%);
@@ -503,7 +573,11 @@ header .header__menu__icon {
   padding: var(--spacing-md);
   z-index: var(--z-top);
   transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .header__nav {
+    transition: transform 300ms ease-in-out;
+  }
 }
 .header__nav.show {
   transform: translateX(0);
@@ -539,6 +613,11 @@ header .header__menu__icon {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
+}
+@media (min-width: 1200px) {
+  .plugins-cards .container {
+    padding: var(--spacing-lg) var(--spacing-md);
+  }
 }
 .plugins-cards__content {
   display: flex;
@@ -596,6 +675,59 @@ header .header__menu__icon {
 .element-overlay__inner::after {
   right: 0;
   transform: translate(50%, -50%);
+}
+
+.arrows {
+  position: relative;
+}
+.arrows .multiplayer {
+  z-index: var(--z-top);
+  position: absolute;
+}
+.arrows .multiplayer-1 {
+  top: 10%;
+  left: 10%;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .arrows .multiplayer-1 {
+    animation: multiplayer-1 10s alternate linear infinite;
+  }
+}
+.arrows .multiplayer-2 {
+  top: 20%;
+  right: 20%;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .arrows .multiplayer-2 {
+    animation: multiplayer-2 10s alternate linear infinite;
+  }
+}
+.arrows .multiplayer-3 {
+  top: 40%;
+  left: 20%;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .arrows .multiplayer-3 {
+    animation: multiplayer-3 10s alternate linear infinite;
+  }
+}
+.arrows .multiplayer-4 {
+  top: 60%;
+  right: 10%;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .arrows .multiplayer-4 {
+    animation: multiplayer-2 10s alternate linear infinite;
+  }
+}
+.arrows .multiplayer-5 {
+  top: 80%;
+  left: 5%;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .arrows .multiplayer-5 {
+    animation: multiplayer-1 10s alternate linear infinite;
+  }
 }
 
 .form {
@@ -812,7 +944,7 @@ footer .footer__menus {
   justify-content: center;
   gap: var(--spacing-sm);
 }
-.main__plugin-icons svg {
+.main__plugin-icons img {
   inline-size: 10vmin;
   block-size: 10vmin;
   min-inline-size: 48px;
@@ -820,22 +952,22 @@ footer .footer__menus {
   border-radius: 6px;
 }
 @media (prefers-reduced-motion: no-preference) {
-  .main__plugin-icons svg {
+  .main__plugin-icons img {
     animation: jumping 1s ease-in-out alternate infinite;
   }
-  .main__plugin-icons svg:nth-child(1) {
+  .main__plugin-icons img:nth-child(1) {
     animation: jumping 1s ease-in-out alternate infinite;
   }
-  .main__plugin-icons svg:nth-child(2) {
+  .main__plugin-icons img:nth-child(2) {
     animation: jumping 1s ease-in-out alternate infinite 0.2s;
   }
-  .main__plugin-icons svg:nth-child(3) {
+  .main__plugin-icons img:nth-child(3) {
     animation: jumping 1s ease-in-out alternate infinite 0.4s;
   }
-  .main__plugin-icons svg:nth-child(4) {
+  .main__plugin-icons img:nth-child(4) {
     animation: jumping 1s ease-in-out alternate infinite 0.6s;
   }
-  .main__plugin-icons svg:nth-child(5) {
+  .main__plugin-icons img:nth-child(5) {
     animation: jumping 1s ease-in-out alternate infinite 0.8s;
   }
 }
@@ -981,7 +1113,7 @@ footer .footer__menus {
   align-items: center;
   gap: var(--spacing-xs);
 }
-.plugin__top-bar svg {
+.plugin__top-bar img {
   block-size: 32px;
   inline-size: 32px;
   border-radius: 6px;
@@ -1027,7 +1159,7 @@ footer .footer__menus {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  align-items: start;
+  align-items: flex-start;
   color: var(--clr-black-8);
 }
 .duplicate input[type=checkbox] {
@@ -1183,71 +1315,5 @@ footer .footer__menus {
   .figma-window__left,
 .figma-window__right {
     display: unset;
-  }
-}
-
-.arrows {
-  position: relative;
-}
-.arrows .multiplayer {
-  z-index: 10;
-}
-.arrows .multiplayer-1 {
-  --id: 1;
-  position: absolute;
-  top: 10%;
-  left: 30%;
-  animation: multiplayer 10s linear alternate infinite;
-}
-.arrows .multiplayer-2 {
-  --id: 2;
-  position: absolute;
-  top: 20%;
-  left: 80%;
-  animation: multiplayer 10s linear alternate infinite;
-}
-.arrows .multiplayer-3 {
-  --id: 2;
-  position: absolute;
-  top: 40%;
-  left: 60%;
-  animation: multiplayer 10s linear alternate infinite;
-}
-.arrows .multiplayer-4 {
-  --id: 2;
-  position: absolute;
-  top: 60%;
-  left: 70%;
-  animation: multiplayer 10s linear alternate infinite;
-}
-.arrows .multiplayer-5 {
-  --id: 2;
-  position: absolute;
-  top: 80%;
-  left: 30%;
-  animation: multiplayer 10s linear alternate infinite;
-}
-
-@keyframes multiplayer {
-  10% {
-    transform: translate(calc(var(--id) * 20px), calc(var(--id) * 20px));
-  }
-  20% {
-    transform: translate(-40px, -80px);
-  }
-  30% {
-    transform: translate(120px, 60px);
-  }
-  40% {
-    transform: translate(20px, 20px);
-  }
-  50% {
-    transform: translate(20px, 20px);
-  }
-  80% {
-    transform: translate(80px, -100px);
-  }
-  100% {
-    transform: translate(20px, 20px);
   }
 }
