--- a/site/src/Sass/components/_NavMenu.scss
+++ b/site/src/Sass/components/_NavMenu.scss
@@ -7,7 +7,10 @@
   padding: var(--spacing-md);
   z-index: var(--z-top);
   transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
+  @media (prefers-reduced-motion: no-preference) {
+    transition: transform 300ms ease-in-out;
+  }
+
   &.show {
     transform: translateX(0);
   }
