--- a/site/src/Sass/components/_PluginCard.scss
+++ b/site/src/Sass/components/_PluginCard.scss
@@ -11,6 +11,7 @@
   padding-top: var(--spacing-md);
   max-width: 340px;
   flex: 1 1 100%;
+  min-height: 430px;
 
   transition: all 0.2s ease-in-out;
 
