changed capitalization in App.scss

--- a/site/src/Sass/App.scss
+++ b/site/src/Sass/App.scss
@@ -20,7 +20,7 @@
 @import './components/NavMenu';
 @import './components/PluginCards';
 @import './components/ElementOverlay';
-@import './components/multiplayer';
+@import './components/Multiplayer';
 @import './components/Form';
 @import './blocks/Return';
 @import './blocks/Footer';
