added useWindowSize hook.changed the layout of the figmaFrame to allow scrolling inside using wrapper container.added position fixed to plugin when mouseLeave or when not touched.added form validations tests

--- a/site/src/Sass/components/_ElementOverlay.scss
+++ b/site/src/Sass/components/_ElementOverlay.scss
@@ -2,8 +2,13 @@
   --square-size: 8px;
   border: 2px solid var(--clr-blue);
   position: absolute;
-  z-index: var(--z-modal);
+  inset: 0;
+  z-index: var(--z-behind);
   pointer-events: none;
+  display: none;
+  &.show {
+    display: block;
+  }
   &::before,
   &::after {
     content: '';
