--- a/site/src/Sass/blocks/_Plugin.scss
+++ b/site/src/Sass/blocks/_Plugin.scss
@@ -2,7 +2,15 @@
   display: none;
   @include responsive-screen(md) {
     display: block;
+    position: fixed;
+    top: 50%;
+    left: 15%;
+    transform: translateY(-50%);
   }
+  @include responsive-screen(xl) {
+    left: 25%;
+  }
+
   z-index: 100;
   height: 380px;
   width: 250px;
@@ -98,7 +106,7 @@
     grid-area: checkbox;
     place-items: center;
     background-image: var(--svg-on);
-    background-position: center;
+    background-position: center 80%;
     background-size: 80%;
     border-radius: var(--plugin-br-controls);
     block-size: 100%;
