--- a/site/src/Sass/blocks/_Return.scss
+++ b/site/src/Sass/blocks/_Return.scss
@@ -3,9 +3,7 @@
 .return {
   background: var(--clr-gray--light);
   position: relative;
-  isolation: isolate;
 
-  overflow-wrap: break-word;
   & > * {
     *::selection {
       background: var(--clr-selection);
@@ -18,6 +16,9 @@
     flex-direction: column;
     gap: var(--spacing-md);
     align-items: center;
+    word-break: break-word;
+    word-wrap: break-word;
+
     &.add-borders > * {
       box-shadow: 0 0 0 2px var(--clr-red);
     }
@@ -27,12 +28,15 @@
     @include responsive-screen(md) {
       text-align: start;
       align-items: flex-start;
+      max-width: 50%;
     }
   }
   &__title {
     color: var(--clr-green);
+
     @include responsive-screen(md) {
       text-align: start;
+      max-width: 100%;
     }
   }
   &__desc {
