--- a/site/src/Sass/abstracts/_animations.scss
+++ b/site/src/Sass/abstracts/_animations.scss
@@ -1,5 +1,3 @@
-// @use 'sass:map';
-
 @keyframes jumping {
   from {
     transform: translateY(0);
@@ -18,22 +16,22 @@
     transform: translate(20px, 20px);
   }
   20% {
-    transform: translate(40px, 80px);
+    transform: translate(60px, 80px);
   }
   30% {
-    transform: translate(-120px, 60px);
+    transform: translate(100px, 120px);
   }
   40% {
-    transform: translate(20px, 20px);
+    transform: translate(-60px, 60px);
   }
   50% {
-    transform: translate(40px, 20px);
+    transform: translate(-20px, -30px);
   }
   80% {
-    transform: translate(80px, -100px);
+    transform: translate(0px, 40px);
   }
   100% {
-    transform: translate(20px, 20px);
+    transform: translate(0, -60px);
   }
 }
 
