--- a/site/src/Sass/blocks/_Footer.scss
+++ b/site/src/Sass/blocks/_Footer.scss
@@ -9,24 +9,31 @@ footer {
       grid-template-columns: auto 1fr;
       justify-items: center;
     }
+    @include containerBreakPoints(
+      var(--spacing-md),
+      var(--spacing-lg) var(--spacing-md),
+      var(--spacing-lg),
+      var(--spacing-lg),
+      var(--spacing-md),
+      var(--spacing-md)
+    );
   }
   .footer__info {
     display: flex;
     flex-direction: column;
-    font-size:var(--fs-xs);
+    font-size: var(--fs-xs);
     gap: var(--spacing-sm);
     &__rights,
     &__email {
-      
       color: var(--clr-white);
     }
   }
-.footer__social-menu + .btn{
-  padding-block:0.5rem;
-  #liquid{
-    fill:var(--clr-white);
+  .footer__social-menu + .btn {
+    padding-block: 0.5rem;
+    #liquid {
+      fill: var(--clr-white);
+    }
   }
-}
   .footer__menus {
     display: flex;
     flex-wrap: wrap;
